--- a/ProgettoLube/backend/webinspector/webinspector/pom.xml
+++ b/ProgettoLube/backend/webinspector/webinspector/pom.xml
@@ -47,6 +47,13 @@
     <artifactId>crawler4j</artifactId>
     <version>4.4.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+<dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.13.1</version>
+</dependency>
+
 
 	</dependencies>
 
