--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "python.pythonPath": "C:\\Users\\matti\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
