--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
 
-*.json
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+/ProgettoLube/WebInspector/venv/
+/.idea/
+/ProgettoLube/.dist/
+/ProgettoLube/.ionide/
+/ProgettoLube/ProgettoLube/frontend/dashboard/node_modules/.cache/
 ProgettoLube/frontend/dashboard/.eslintcache
