--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
+\node_modules
 /.pnp
 .pnp.js
 
@@ -28,5 +30,6 @@ yarn-error.log*
 /ProgettoLube/.dist/
 /ProgettoLube/.ionide/
 ProgettoLube/frontend/dashboard/node_modules/
+ProgettoLube\frontend\dashboard\node_modules\
 ProgettoLube/frontend/dashboard/.eslintcache
 *.pyc
