--- a/ProgettoLube/WebInspector/requirements.txt
+++ b/ProgettoLube/WebInspector/requirements.txt
@@ -1,17 +1,23 @@
 absl-py==0.11.0
 aniso8601==8.1.0
+appdirs==1.4.4
 astunparse==1.6.3
 attrs==20.3.0
 beautifulsoup4==4.9.3
+bs4==0.0.1
 cachetools==4.1.1
 certifi==2020.11.8
 cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.4
+cssselect==1.1.0
 cycler==0.10.0
+dateparser==1.0.0
 decorator==4.4.2
 dnspython==1.16.0
+facebook-scraper==0.2.18
+fake-useragent==0.1.11
 filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.9
@@ -28,11 +34,13 @@ h5py==2.10.0
 idna==2.10
 imageio==2.9.0
 imutils==0.5.3
+insta-scrape==2.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
+lxml==4.6.2
 Markdown==3.3.3
 MarkupSafe==1.1.1
 matplotlib==3.3.3
@@ -42,20 +50,26 @@ oauthlib==3.1.0
 opencv-python==4.4.0.46
 opt-einsum==3.3.0
 pandas==1.2.0
+parse==1.19.0
 Pillow==8.0.1
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pyee==8.1.0
 pymongo==3.11.2
 pyparsing==2.4.7
+pyppeteer==0.2.5
+pyquery==1.4.3
 pyrsistent==0.17.3
 pytesseract==0.3.6
 python-dateutil==2.8.1
 pytz==2020.4
 PyWavelets==1.1.1
+regex==2020.11.13
 requests==2.25.0
 requests-file==1.5.1
+requests-html==0.10.0
 requests-oauthlib==1.3.0
 rsa==4.6
 schedule==0.6.0
@@ -72,7 +86,11 @@ tensorflow-hub==0.10.0
 termcolor==1.1.0
 tifffile==2020.11.18
 tldextract==3.1.0
+tqdm==4.56.0
+tzlocal==2.1
 urllib3==1.26.2
+w3lib==1.22.0
+websockets==8.1
 Werkzeug==0.16.1
 wrapt==1.12.1
 xlrd==1.2.0
